// Copyright 2015, Google Inc.
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are
// met:
//
//     * Redistributions of source code must retain the above copyright
// notice, this list of conditions and the following disclaimer.
//     * Redistributions in binary form must reproduce the above
// copyright notice, this list of conditions and the following disclaimer
// in the documentation and/or other materials provided with the
// distribution.
//     * Neither the name of Google Inc. nor the names of its
// contributors may be used to endorse or promote products derived from
// this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.djhworld.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service TabletServer {
    // Sends a greeting
    rpc Get (GetRequest) returns (GetResponse) {
    }
    rpc Add (AddItemRequest) returns (AddItemResponse) {
    }

    rpc BatchAdd (BatchAddItemRequest) returns (BatchAddItemResponse) {
    }
}

// The request message containing the user's name.
message GetRequest {
    string row = 1;
    string column = 2;
}

// The response message containing the greetings
message GetResponse {
    string value = 1;
}

// The request message containing the user's name.
message AddItemRequest {
    string row = 1;
    string column = 2;
    string value = 3;
}

// The request message containing the user's name.
message AddItemResponse {
    bool ok = 1;
}

// The request message containing the user's name.
message BatchAddItemRequest {
    repeated AddItemRequest addItemRequests = 1;
}

// The request message containing the user's name.
message BatchAddItemResponse {
    bool ok = 1;
}


// The request message containing the user's name.
message DeleteItemRequest {
    string row = 1;
    string column = 2;
}

// The request message containing the user's name.
message DeleteItemResponse {
    bool ok = 1;
}

